# Calculator2.0

./: CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/Calculator/: Calculator.cpp  Calculator.h
src/DLLs/: CMakeLists.txt
src/DLLs/Core/: Core.cpp  Core.h
src/DLLs/Max/: Max.cpp  Max.h
src/DLLs/Pow/: Pow.cpp  Pow.h
src/DLLs/Trig/: Trig.cpp  Trig.h
src/Parser/: Parser.cpp  Parser.h
src/PluginsLoader/: PluginsLoader.cpp
src/include/: IFunction.h  IOperation.h  IOperator.h  PluginsLoader.h
